# mindmatrix

./: README.md  mkdocs.yml  pyproject.toml
.cursor/rules/: ai-agent-patterns.mdc  development-workflow.mdc  fastapi-development.mdc  project-structure.mdc  python-coding-standards.mdc
examples/: agent_factory.py  simple_workflow.py
mindmatrix/: __init__.py  _mindmatrix.py
mindmatrix/agent_base/: __init__.py  _base.py  _memory.py  _models.py
mindmatrix/builtins_/tasks/: __init__.py
mindmatrix/datasets_/: sharegpt.py
mindmatrix/knowledge_base/: _base.py
mindmatrix/memory_base/: __init__.py  _memory_manager.py
mindmatrix/tasks/: embeddings.py
mindmatrix/utils/: http_client.py  mindmatrix_client.py  mixins.py  reranker_client.py
mindmatrix/web/: __init__.py  _app.py  _contextvars.py  _endpoints.py  _openai_adapter.py  _security.py  _sse_adapter.py
src/mindmatrix/: __init__.py  _mindmatrix.py
src/mindmatrix/agent_base/: __init__.py  _base.py
src/mindmatrix/builtins_/tasks/: embeddings.py
src/mindmatrix/knowledge_base/: __init__.py
src/mindmatrix/memory_base/: __init__.py  _memory.py
src/mindmatrix/utils/: mixins.py  reranker_client.py
src/mindmatrix/web/: _app.py  _endpoints.py  _openai_adapter.py  _sse_adapter.py
