[project]
name = "mindmatrix"
version = "0.1.0.post1"
description = "MindMatrix 是一个基于 Agno 的轻量级智能体\"应用\"框架，专为快速构建具有RAG、记忆和可访问能力的生产级多智能体系统而设计。"
readme = "README.md"
requires-python = "<3.14,>=3.12"
dependencies = [
    "agno>=1.7.7,<1.8.0",
    "fastapi>=0.116.1",
    "httpx[socks]>=0.28.1",
    "loguru>=0.7.3",
    "openai>=1.98.0",
    "sse-starlette>=3.0.2",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
]
